--- a/inauguralproject/Inauguralproject_done.ipynb
+++ b/inauguralproject/Inauguralproject_done.ipynb
@@ -33,11 +33,11 @@
     "\n",
     "Now, inserting (4) into $c$ we find\n",
     "\n",
-    "$$c=m-rp_{h}+\\tau^{g}\\tilde{p}_{h}+\\tau^{p}\\text{max}\\left\\{ \\tilde{p}_{h}-\\bar{p},0\\right\\}$$\n",
+    "$$c=m-(rp_{h}+\\tau^{g}\\tilde{p}_{h}+\\tau^{p}\\text{max}\\left\\{ \\tilde{p}_{h}-\\bar{p},0\\right\\})$$\n",
     "\n",
     "Thus, we can write up the objective of the household is now written as \n",
     "\n",
-    "$$c^{*},h^{*}=\\text{argmax}\\left(m-rp_{h}+\\tau^{g}\\tilde{p}_{h}+\\tau^{p}\\text{max}\\left\\{ \\tilde{p}_{h}-\\bar{p},0\\right\\} \\right)^{1-\\phi}h^{\\phi}$$"
+    "$$c^{*},h^{*}=\\text{argmax}\\left(m-(rp_{h}+\\tau^{g}\\tilde{p}_{h}+\\tau^{p}\\text{max}\\left\\{ \\tilde{p}_{h}-\\bar{p},0\\right\\}) \\right)^{1-\\phi}h^{\\phi}$$"
    ]
   },
   {
